--- a/.air.toml
+++ b/.air.toml
@@ -1,5 +1,5 @@
 [build]
-cmd = "go build -o ./bin/api"
+cmd = "make build-dev"
 bin = "./bin/api"
 include_dir = ["ui", "pkg"]
 exclude_dir = ["ui/node_modules", "ui/build"]
