Use gh CLI to create GitHub release in deploy pipeline
Signed-off-by: Lucas Rodriguez <lucas.rodriguez9616@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,6 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: ./scripts/deploy.sh
+
+      - name: Create GitHub Release
+        run: gh release create ${{ github.ref_name }} --verify-tag --notes-from-tag
