--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,6 @@ jobs:
         run: ./scripts/deploy.sh
 
       - name: Create GitHub Release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: gh release create ${{ github.ref_name }} --verify-tag --notes-from-tag
