--- a/ui/package.json
+++ b/ui/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "esbuild": "0.24.0"
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.0",
+    "esbuild": "0.24.0",
+    "typescript": "5.6.3"
   },
   "dependencies": {
     "@emotion/styled": "11.13.0",
     "@mui/material": "6.1.2",
-    "@types/node": "22.7.5",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "typescript": "5.6.3"
+    "react-dom": "18.3.1"
   },
   "scripts": {
     "build": "esbuild src/index.tsx --bundle --minify --outfile=build/app.js --loader:.tsx=tsx --loader:.css=css && cp public/index.html build/index.html"
