--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Unit Tests
+name: Run Tests
 
 on:
   push:
@@ -18,3 +18,12 @@ jobs:
 
       - name: Run Unit Tests
         run: make test-unit
+
+  smoke-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Run Smoke Tests
+        run: make test-smoke
