mount gcp creds to /tmp dir in container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=${HOME}/.config/gcloud/application_default_credentials.json
+      - GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-creds.json
     volumes:
-      - $GOOGLE_APPLICATION_CREDENTIALS:${HOME}/.config/gcloud/application_default_credentials.json:ro
+      - $GOOGLE_APPLICATION_CREDENTIALS:/tmp/gcp-creds.json:ro
     platform: linux/amd64
