--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,26 @@
-name: Deploy Website
+name: Run Tests
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - main
+  pull_request:
 
 permissions:
   contents: write
   id-token: write
 
 jobs:
-  deploy-site:
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Run Unit Tests
+        run: make test-unit
+
+  smoke-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,21 +36,5 @@ jobs:
         # allows user in the docker container used by smoke tests to read the file
         run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
 
-      - name: Run Tests
-        run: make test
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Deploy
-        env:
-          IMAGE_VERSION: ${{ github.ref_name }}
-        run: ./scripts/deploy.sh
-
-      - name: Create GitHub Release
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: gh release create ${{ github.ref_name }} --verify-tag --generate-notes
+      - name: Run Smoke Tests
+        run: make test-smoke
