--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -30,6 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !success() }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
       - name: Send Notification Email
         run: go run cmd/sendemail/main.go
         env:
