--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@eslint/js": "9.17.0",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "esbuild": "0.24.2",
-    "typescript": "5.7.2"
+    "eslint": "9.17.0",
+    "eslint-plugin-react": "7.37.3",
+    "globals": "15.14.0",
+    "typescript": "5.7.2",
+    "typescript-eslint": "8.19.0"
   },
   "dependencies": {
     "@emotion/styled": "11.14.0",
@@ -15,6 +20,8 @@
     "react-dom": "19.0.0"
   },
   "scripts": {
-    "build": "esbuild src/index.tsx --bundle --minify --outfile=build/app.js && cp public/index.html build/index.html"
+    "build": "esbuild src/index.tsx --bundle --minify --outfile=build/app.js && cp public/index.html build/index.html",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   }
 }
