--- a/ui/package.json
+++ b/ui/package.json
@@ -8,8 +8,11 @@
     "@types/react-dom": "19.0.2",
     "esbuild": "0.24.2",
     "eslint": "9.17.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "7.37.3",
     "globals": "15.14.0",
+    "prettier": "3.4.2",
     "typescript": "5.7.2",
     "typescript-eslint": "8.19.0"
   },
