--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,25 @@ jobs:
       - name: Run Smoke Tests
         run: make test-smoke
 
+  e2e-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Google Cloud Auth
+        uses: google-github-actions/auth@6fc4af4b145ae7821d527454aa9bd537d1f2dc5f # v2.1.7
+        with:
+          project_id: "groovy-momentum-434802-g9"
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+
+      - name: Adjust permissions of GCP credentials file
+        # allows user in the docker container used by e2e tests to read the file
+        run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
+
+      - name: Run E2E Tests
+        run: make test-e2e
+
   lint:
     runs-on: ubuntu-latest
     steps:
