--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       platforms:
         - linux/amd64
-    image: oss-contribute:smoke-test
+    image: oss-contribute:test
     container_name: oss-contribute
     ports:
       - "8080:8080"
