--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "9.17.0",
+    "@types/node": "22.10.5",
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
+    "cypress": "13.17.0",
     "esbuild": "0.24.2",
     "eslint": "9.17.0",
     "eslint-config-prettier": "9.1.0",
@@ -25,6 +27,8 @@
   "scripts": {
     "build": "esbuild src/index.tsx --bundle --minify --outfile=build/app.js && cp public/index.html build/index.html",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test:e2e": "cypress run && cypress run --browser firefox",
+    "test:e2e-dev": "cypress open"
   }
 }
