--- a/ui/package.json
+++ b/ui/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "9.18.0",
-    "@types/node": "22.10.5",
-    "@types/react": "19.0.6",
-    "@types/react-dom": "19.0.3",
-    "cypress": "13.17.0",
-    "esbuild": "0.24.2",
     "eslint": "9.18.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "7.37.3",
-    "globals": "15.14.0",
+    "typescript-eslint": "8.19.1",
     "prettier": "3.4.2",
-    "typescript": "5.7.3",
-    "typescript-eslint": "8.19.1"
+    "esbuild": "0.24.2",
+    "cypress": "13.17.0",
+    "globals": "15.14.0",
+    "@types/node": "22.10.5",
+    "@types/react": "19.0.6",
+    "@types/react-dom": "19.0.3",
+    "typescript": "5.7.3"
   },
   "dependencies": {
     "@emotion/styled": "11.14.0",
