--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Run Unit Tests
-        run: make test-unit
+        run: just test-unit
 
   smoke-tests:
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
         run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
 
       - name: Run Smoke Tests
-        run: make test-smoke
+        run: just test-smoke
 
   e2e-tests:
     runs-on: ubuntu-latest
@@ -56,7 +56,7 @@ jobs:
         run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
 
       - name: Run E2E Tests
-        run: make test-e2e
+        run: just test-e2e
 
   lint:
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
 
       - name: Lint
         run: |
-          if ! make lint; then
-            echo "Linting failed. Try running \`make lint-fix\` to automatically resolve the linting errors."
+          if ! just lint; then
+            echo "Linting failed. Try running \`just lint-fix\` to automatically resolve the linting errors."
             exit 1
           fi
