--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
         # allows user in the docker container used by smoke tests to read the file
         run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
 
+      - name: Install just
+        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3.0.0
+
       - name: Run Smoke Tests
         run: just test-smoke
 
@@ -58,6 +61,9 @@ jobs:
         # allows user in the docker container used by e2e tests to read the file
         run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
 
+      - name: Install just
+        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3.0.0
+
       - name: Run E2E Tests
         run: just test-e2e
 
@@ -69,6 +75,9 @@ jobs:
 
       - name: Install Node deps
         run: npm --prefix ui ci
+
+      - name: Install just
+        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3.0.0
 
       - name: Lint
         run: |
