--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
+      - name: Install just
+        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3.0.0
+
       - name: Run Unit Tests
-        run: make test-unit
+        run: just test-unit
 
   smoke-tests:
     runs-on: ubuntu-latest
@@ -36,8 +39,11 @@ jobs:
         # allows user in the docker container used by smoke tests to read the file
         run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
 
+      - name: Install just
+        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3.0.0
+
       - name: Run Smoke Tests
-        run: make test-smoke
+        run: just test-smoke
 
   e2e-tests:
     runs-on: ubuntu-latest
@@ -55,8 +61,11 @@ jobs:
         # allows user in the docker container used by e2e tests to read the file
         run: chmod 644 "$GOOGLE_APPLICATION_CREDENTIALS"
 
+      - name: Install just
+        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3.0.0
+
       - name: Run E2E Tests
-        run: make test-e2e
+        run: just test-e2e
 
   lint:
     runs-on: ubuntu-latest
@@ -67,9 +76,12 @@ jobs:
       - name: Install Node deps
         run: npm --prefix ui ci
 
+      - name: Install just
+        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3.0.0
+
       - name: Lint
         run: |
-          if ! make lint; then
-            echo "Linting failed. Try running \`make lint-fix\` to automatically resolve the linting errors."
+          if ! just lint; then
+            echo "Linting failed. Try running \`just lint-fix\` to automatically resolve the linting errors."
             exit 1
           fi
