--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,6 +1,10 @@
 services:
   oss-projects:
-    image: ghcr.io/lucasrod16/oss-projects:latest
+    build:
+      context: .
+      platforms:
+        - linux/amd64
+    image: oss-projects:test
     container_name: oss-projects
     ports:
       - "8080:8080"
@@ -9,4 +13,3 @@ services:
     volumes:
       - $GOOGLE_APPLICATION_CREDENTIALS:/tmp/gcp-creds.json:ro
     platform: linux/amd64
-    restart: unless-stopped
