add hetzner api key

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Deploy
         working-directory: deploy
+        env:
+          HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
         run: just deploy
 
       - name: Create GitHub Release
