--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   oss-projects:
-    image: lucasrod96/oss-projects-hetzner-migration@sha256:ef41d48710660a19afc3d02e39fd5edb6a8d80e6892a2d0c37e0814ce9c2dbb2
+    image: lucasrod96/oss-projects:v0.1.4@sha256:6a69a1f7eed61a6aa2e745ab5bb609c4eda4a292124a0a7609f26619c3c0f87d
     container_name: oss-projects
     ports:
       - "8080:8080"
