--- a/ui/package.json
+++ b/ui/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "9.32.0",
+    "@types/node": "24.2.0",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
+    "cypress": "14.5.3",
+    "esbuild": "0.25.8",
     "eslint": "9.32.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-react": "7.37.5",
-    "typescript-eslint": "8.39.0",
-    "prettier": "3.6.2",
-    "esbuild": "0.25.8",
-    "cypress": "14.5.3",
     "globals": "16.3.0",
-    "@types/node": "24.2.0",
-    "@types/react": "19.1.9",
-    "@types/react-dom": "19.1.7",
-    "typescript": "5.9.2"
+    "prettier": "3.6.2",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.39.0"
   },
   "dependencies": {
     "@emotion/styled": "11.14.1",
-    "@mui/material": "7.3.0",
+    "@mui/material": "7.3.1",
     "react": "19.1.1",
     "react-dom": "19.1.1"
   },
